Protect task data from storage failures
Validate every stored record and report damaged lines while retaining
later valid tasks. Open unreadable or damaged files read-only to avoid
overwriting data that could not be loaded safely.

Write proposed changes to a temporary file and replace storage
atomically. Publish the in-memory change only after saving succeeds,
and reject external file edits instead of silently overwriting them.
Show storage failures in both command interfaces and GUI card actions.

Add isolated tests for permissions, malformed records, invalid UTF-8,
external changes, restart round trips, and preservation of original
bytes. Document recovery steps and extend the console test plan.